Passing tests now

--- a/sio.xcodeproj/xcshareddata/xcschemes/sio-iOS.xcscheme
+++ b/sio.xcodeproj/xcshareddata/xcschemes/sio-iOS.xcscheme
@@ -31,7 +31,8 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "52D6D9851BEFF229002C0205"
