Embedded queues and delays into the effect. All tests are passing except for the timeout one

--- a/sio.xcodeproj/xcshareddata/xcbaselines/52D6D9851BEFF229002C0205.xcbaseline/Info.plist
+++ b/sio.xcodeproj/xcshareddata/xcbaselines/52D6D9851BEFF229002C0205.xcbaseline/Info.plist
@@ -4,6 +4,37 @@
 <dict>
 	<key>runDestinationsByUUID</key>
 	<dict>
+		<key>2638D4F1-696D-4CF1-BC51-463C161CA73D</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>400</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Intel Core i5</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>2300</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>MacBookPro15,2</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>4</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>x86_64</string>
+			<key>targetDevice</key>
+			<dict>
+				<key>modelCode</key>
+				<string>iPhone11,4</string>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.iphonesimulator</string>
+			</dict>
+		</dict>
 		<key>CB343D03-8BB3-4BB4-A678-26BA12FC294F</key>
 		<dict>
 			<key>localComputer</key>
