--- a/sio.xcodeproj/xcshareddata/xcschemes/Sio-Package.xcscheme
+++ b/sio.xcodeproj/xcshareddata/xcschemes/Sio-Package.xcscheme
@@ -14,6 +14,34 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::Sio"
+               BuildableName = "Sio.framework"
+               BlueprintName = "Sio"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioCodec"
+               BuildableName = "SioCodec.framework"
+               BlueprintName = "SioCodec"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "Sio::SioEffects"
                BuildableName = "SioEffects.framework"
                BlueprintName = "SioEffects"
@@ -34,20 +62,6 @@
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::Sio"
-               BuildableName = "Sio.framework"
-               BlueprintName = "Sio"
-               ReferencedContainer = "container:Sio.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -60,9 +74,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioValueStoreTests"
-               BuildableName = "SioValueStoreTests.xctest"
-               BlueprintName = "SioValueStoreTests"
+               BlueprintIdentifier = "Sio::SioTests"
+               BuildableName = "SioTests.xctest"
+               BlueprintName = "SioTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -80,9 +94,19 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioTests"
-               BuildableName = "SioTests.xctest"
-               BlueprintName = "SioTests"
+               BlueprintIdentifier = "Sio::SioValueStoreTests"
+               BuildableName = "SioValueStoreTests.xctest"
+               BlueprintName = "SioValueStoreTests"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioCodecTests"
+               BuildableName = "SioCodecTests.xctest"
+               BlueprintName = "SioCodecTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -103,9 +127,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "Sio::SioEffects"
-            BuildableName = "SioEffects.framework"
-            BlueprintName = "SioEffects"
+            BlueprintIdentifier = "Sio::Sio"
+            BuildableName = "Sio.framework"
+            BlueprintName = "Sio"
             ReferencedContainer = "container:Sio.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
