feat: Implemented most of the interface from ValueStore for IValueStore. Fixed package issues.

--- a/sio.xcodeproj/xcshareddata/xcschemes/Sio-Package.xcscheme
+++ b/sio.xcodeproj/xcshareddata/xcschemes/Sio-Package.xcscheme
@@ -14,34 +14,6 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioCodec"
-               BuildableName = "SioCodec.framework"
-               BlueprintName = "SioCodec"
-               ReferencedContainer = "container:Sio.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioNetwork"
-               BuildableName = "SioNetwork.framework"
-               BlueprintName = "SioNetwork"
-               ReferencedContainer = "container:Sio.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
                BlueprintIdentifier = "Sio::SioValueStore"
                BuildableName = "SioValueStore.framework"
                BlueprintName = "SioValueStore"
@@ -70,9 +42,51 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioNetwork"
+               BuildableName = "SioNetwork.framework"
+               BlueprintName = "SioNetwork"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "Sio::SioEffects"
                BuildableName = "SioEffects.framework"
                BlueprintName = "SioEffects"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioCodec"
+               BuildableName = "SioCodec.framework"
+               BlueprintName = "SioCodec"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioIValueStore"
+               BuildableName = "SioIValueStore.framework"
+               BlueprintName = "SioIValueStore"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -88,9 +102,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioTests"
-               BuildableName = "SioTests.xctest"
-               BlueprintName = "SioTests"
+               BlueprintIdentifier = "Sio::SioNetworkTests"
+               BuildableName = "SioNetworkTests.xctest"
+               BlueprintName = "SioNetworkTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -98,9 +112,19 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioCodecTests"
-               BuildableName = "SioCodecTests.xctest"
-               BlueprintName = "SioCodecTests"
+               BlueprintIdentifier = "Sio::SioIValueStoreTests"
+               BuildableName = "SioIValueStoreTests.xctest"
+               BlueprintName = "SioIValueStoreTests"
+               ReferencedContainer = "container:Sio.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Sio::SioValueStoreTests"
+               BuildableName = "SioValueStoreTests.xctest"
+               BlueprintName = "SioValueStoreTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -118,9 +142,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioNetworkTests"
-               BuildableName = "SioNetworkTests.xctest"
-               BlueprintName = "SioNetworkTests"
+               BlueprintIdentifier = "Sio::SioTests"
+               BuildableName = "SioTests.xctest"
+               BlueprintName = "SioTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -128,9 +152,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Sio::SioValueStoreTests"
-               BuildableName = "SioValueStoreTests.xctest"
-               BlueprintName = "SioValueStoreTests"
+               BlueprintIdentifier = "Sio::SioCodecTests"
+               BuildableName = "SioCodecTests.xctest"
+               BlueprintName = "SioCodecTests"
                ReferencedContainer = "container:Sio.xcodeproj">
             </BuildableReference>
          </TestableReference>
